--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -13,12 +13,23 @@ body {
   flex-direction: column;
   align-items: center;
   gap: 2rem;
-  font-size: 2rem;
+  font-size: 1rem;
 }
 
 input,
 button {
-  font-size: 2rem;
+  font-size: 1rem;
   padding: 1rem;
   border-radius: 10px;
+}
+
+@media screen and (min-width: 768px) {
+  body {
+    font-size: 2rem;
+  }
+
+  input,
+  button {
+    font-size: 2rem;
+  }
 }
